fixed IZ:165386 (Breakpoints disabled in modified code)